[FEATURES] Template navbar agregado /CDN bootstrap

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -1,7 +1,20 @@
-{% extends 'webapp\base.html' %}
+{% extends 'webapp/base.html' %}
 
 {% block content %}
 
-<h1>Hello Wordl</h1>
+<body class="index">
+
+  <div class="text-center mt-2">
+
+    <h2>Projecto Managment</h2>
+    <h5 class="p-1">Tene un seguiminto de tus registros de manera efectiva</h5>
+
+    <hr>
+
+    <a href="" class="btn btn-dark mt-5" type="button" href="{% url '' %}">SignUp</a>
+
+  </div>
+
+</body>
 
 {% endblock %}
